--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -1230,7 +1230,7 @@ ul.breadcrumbs__list {
         /* background: rgba(255, 255, 255, .5); */
         /* border-bottom: 1px solid #111; */
         /* backdrop-filter: blur(30px); */
-        -webkit-backdrop-filter: blur(30px);
+        -webkit-backdrop-filter: none;
         align-items: center;
     }
 
