--- a/wp-content/themes/basic-theme/css/fonts.css
+++ b/wp-content/themes/basic-theme/css/fonts.css
@@ -69,3 +69,33 @@
     url(../fonts/Manrope-Light.woff2) format("woff2");
     font-display: swap;
 }
+
+@font-face {
+    font-family: "Cormorant";
+    font-weight:300;
+    src: local("CormorantGaramond"), 
+    url(../fonts/CormorantGaramond-Light.ttf) format("truetype"), 
+    url(../fonts/CormorantGaramond-Light.woff) format("woff"), 
+    url(../fonts/CormorantGaramond-Light.woff2) format("woff2");
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Cormorant";
+    font-weight:400;
+    src: local("CormorantGaramond"), 
+    url(../fonts/CormorantGaramond-Regular.ttf) format("truetype"), 
+    url(../fonts/CormorantGaramond-Regular.woff) format("woff"), 
+    url(../fonts/CormorantGaramond-Regular.woff2) format("woff2");
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Cormorant";
+    font-weight:600;
+    src: local("CormorantGaramond"), 
+    url(../fonts/CormorantGaramond-Medium.ttf) format("truetype"), 
+    url(../fonts/CormorantGaramond-Medium.woff) format("woff"), 
+    url(../fonts/CormorantGaramond-Medium.woff2) format("woff2");
+    font-display: swap;
+}
