--- a/wp-content/themes/basic-theme/css/header-style.css
+++ b/wp-content/themes/basic-theme/css/header-style.css
@@ -10,7 +10,7 @@ styles for header theme basic
 
 
 header.header {
-    position: fixed;
+    /* position: fixed; */
     background: transparent;
     width: 100%;
     font-size: 16px;
