--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -826,7 +826,7 @@ span.swiper-pagination-bullet{
 }
 
 .section-hero__slider__header-block .fixed-container h2 {
-    width: 80%;
+    /* width: 80%; */
 }
 
 .section-hero__slider__header-block .fixed-container {
