--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -162,6 +162,7 @@ p{
 }
 
 h2.site-page__title{
+    text-align: center;
     font-size: 36px;
     font-weight: 300;
     line-height: 1;
@@ -940,39 +941,85 @@ p.popup-description {
     align-items: stretch;
 }
 
-
-
 .archive-posts__grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 30px;
+    display: block;
+    /* grid-template-columns: repeat(2, 1fr);
+    gap: 30px; */
     margin-top: 30px;
 }
 
-.archive-posts__grid a,
-.entry-post__inshortcode {
-    overflow:hidden;
-    height: 350px;
+.archive-posts__grid div:not(:last-child) {
+    margin-bottom: 30px;
+}
+
+/* .archive-posts__grid a{
+    display: flex;
+    overflow: hidden;
+    height: auto;
     width: 100%;
     position: relative;
+    padding: 7px;
+    border-radius: 5px;
+    border: 1px solid #cacaca;
+} */
+/* 
+.archive-posts__grid a img {
+    width: 40%;
+    height: 350px;
+    object-fit: cover;
+    object-position: center;
+} */
+
+.entry-post__programm .entry-post__programm__link{
+    width:400px;
+    height: 250px;
+    display: block;
+}
+
+.entry-post__programm {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-between;
+    padding: 7px;
+    border-radius: 5px;
     border: 1px solid #cacaca;
 }
 
-.archive-posts__grid a img,
-.entry-post__inshortcode img {
-    width: 100%;
+.entry-post__programm__link img{
+    width:100%;
     height: 100%;
+    display: block;
     object-fit: cover;
     object-position: center;
 }
 
+.entry-post__programm__content {
+    width: 100%;
+    margin-top: 20px;
+    transition: opacity .5s ease-in;
+}
+/* 
+.entry-post__programm._open .entry-post__content {
+    display: block;
+} */
+
+.entry-post__programm__content {
+    display: none;
+}
+
+.entry-post__programm__content._open {
+    display: block;
+}
+
+
+
 .entry-post__inner__head {
-    position: absolute;
-    bottom: 0;
+    /* position: absolute;
+    bottom: 0; */
 }
 
 .entry-post__inner__head {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     padding: 20px 10px;
     width: 100%;
@@ -980,14 +1027,46 @@ p.popup-description {
     background: rgba(0, 0, 0, .4);
     backdrop-filter: blur(30px);
     position: absolute;
-    bottom: 0;
+    bottom: 0; */
 }
-
+.entry-post__inner__head__summary {
+    width: calc(100% - 430px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+/* 
 .entry-post__inner__head .entry-post__excerpt {
     height: 70px;
+} */
+
+.entry-post__inner__head__summary .entry-post__programm__more {
+    align-self: flex-end;
+    display: flex;
+    align-items: center;
+    padding: 3px 15px;
+    gap: 10px;
+    border-bottom: 1px solid var(--green);
+    transition: all .5s linear;
 }
 
-.entry-post__inner__head a.entry-post__inshortcode__more {
+a.entry-post__programm__more:hover{
+    background: #eeeeee;
+    transition: all .5s linear;
+}
+
+a.entry-post__programm__more:hover span{
+    color: var(--green);
+    transition: all .5s linear;
+}
+
+a.entry-post__programm__more:hover svg path{
+    fill: var(--green);
+    transition: all .5s linear;
+}
+
+
+.entry-post__inner__head a.entry-post__programm__more {
     height: auto;
     margin-top: 20px;
     color: var(--green);
@@ -996,24 +1075,24 @@ p.popup-description {
     border: none;
 }
 
-.entry-post__inner__head a.entry-post__inshortcode__more {
+.entry-post__inner__head a.entry-post__programm__more {
     position: relative;
     padding: 3px;
     border-radius: 3px;
     display: block;
     width: 150px;
-    color: #000;
+    color: #fff;
     text-align: center;
-    background: #fff;
+    background: var(--green);
 }
 
-.entry-post__inner__head a.entry-post__inshortcode__more:hover{
+.entry-post__inner__head a.entry-post__programm__more:hover{
     background:var(--green);
     color: #fff;
     transition: all .3s linear;
 }
 
-.entry-post__inner__head a.entry-post__inshortcode__more:after{
+.entry-post__inner__head a.entry-post__programm__more:after{
     content:'';
     display:block;
     position: absolute;
@@ -1024,7 +1103,7 @@ p.popup-description {
     bottom: 0;
 }
 
-.entry-post__inner__head a.entry-post__inshortcode__more {
+.entry-post__inner__head a.entry-post__programm__more {
     height: auto;
     margin-top: 20px;
 }
@@ -1095,6 +1174,11 @@ p.popup-description {
     padding: 30px;
     transform: translateY(-40px);
     background: #fff;
+    /* backdrop-filter: drop-shadow(2px 4px 6px black); */
+    /* backdrop-filter: drop-shadow(4px 4px 10px blue); */
+    box-shadow: black;
+    /* text-shadow: 0 0 black; */
+    box-shadow: 0 0 10px rgba(0,0,0,.1);
 }
 
 .section-books .fixed-container {
@@ -1659,7 +1743,7 @@ background: linear-gradient(0deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%);
         font-size: 18px !important;
     }
 
-    .archive-posts__grid a, .entry-post__inshortcode {
+    .archive-posts__grid a, .entry-post__programm {
         overflow: hidden;
         height: auto;
         width: 100%;
@@ -1667,7 +1751,7 @@ background: linear-gradient(0deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%);
         border: 1px solid #cacaca;
     }
 
-    .archive-posts__grid a img, .entry-post__inshortcode img {
+    .archive-posts__grid a img, .entry-post__programm img {
         width: 100%;
         height: 300px;
         object-fit: cover;
