--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -983,6 +983,7 @@ p.popup-description {
     padding: 7px;
     border-radius: 5px;
     border: 1px solid #cacaca;
+    margin-bottom: 30px;
 }
 
 .entry-post__programm__link img{
