--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -239,15 +239,15 @@ main.main {
     width: 40px;
     height: 40px;
     padding: 10px;
-    border:1px solid rgba(22, 159, 219, .8);
-    background: rgba(22, 159, 219, .8);
+    border:1px solid rgba(1, 175, 52, 0.7);
+    background: rgba(1, 175, 52, 0.7);
     border-radius: 100%;
     transition: all .3s linear;
 }
 
 .arrow-up.show:hover{
     background: transparent;
-    border:1px solid rgba(22, 159, 219, 1);
+    border:1px solid rgba(1, 175, 52, 1);
     transition: all .3s linear;
 }
 
@@ -261,7 +261,7 @@ main.main {
 }
 
 .arrow-up.show:hover svg path{
-    fill: rgb(22, 159, 219);
+    fill: rgba(1, 175, 52, 1);
 }
 
 /* .page-container .fixed-container {
