--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -362,13 +362,25 @@ a.posts__list__item__link img {
     height: calc(100vh - 150px);
 }
 
-section.section-hero:after {
+/* section.section-hero:after {
     content: '';
     display: block;
     width: 100%;
     height: 100%;
     background: rgb(0, 24, 7);
     background: linear-gradient(0deg, rgba(0, 24, 7, 1) 0%, rgba(0, 24, 7, 0) 100%);
+    position: absolute;
+    top: 0;
+    left: 0;
+} */
+
+section.section-hero:after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: rgb(0, 24, 7);
+    background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 15%);
     position: absolute;
     top: 0;
     left: 0;
@@ -782,17 +794,35 @@ span.swiper-pagination-bullet{
     transform: translateY(-40px);
 } */
 
-.swiper-slide.hero-slider__slide {
-    /* background: rgba(255, 255, 255, .5);
-    border-bottom: 1px solid #111;
-    backdrop-filter: blur(30px);
-    -webkit-backdrop-filter: blur(30px); */
+/* .swiper-slide.hero-slider__slide {
     background:#fff;
     height: calc(100% - 70px);
     padding: 7px;
     border-radius: 5px;
     border:1px solid #cacaca;
     opacity: .2;
+} */
+
+.swiper-slide.hero-slider__slide {
+position: relative;
+    background: #fff;
+    height: calc(100% - 70px);
+    padding: 7px;
+    border-radius: 0;
+    /* border-bottom: 2px solid var(--green); */
+    /* border: 1px solid #cacaca; */
+    opacity: .2;
+}
+
+.swiper-slide.hero-slider__slide:after {
+    content: '';
+    display: block;
+    width: 60%;
+    height: 1px;
+    background: var(--black);
+    position: absolute;
+    left: 20%;
+    bottom: 30px;
 }
 
 .swiper-slide.hero-slider__slide.swiper-slide-prev,
