--- a/wp-content/themes/basic-theme/css/header-style.css
+++ b/wp-content/themes/basic-theme/css/header-style.css
@@ -10,7 +10,7 @@ styles for header theme basic
 
 
 header.header {
-    /* position: fixed; */
+    position: fixed;
     background: transparent;
     width: 100%;
     font-size: 16px;
@@ -21,6 +21,7 @@ header.header {
     position: relative;
     padding-top: 10px;
     padding-bottom: 10px;
+    border-bottom: 1px solid #cacaca;
     overflow: hidden;
     background: transparent;
     display: flex;
