--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -380,7 +380,8 @@ section.section-hero:after {
     width: 100%;
     height: 100%;
     background: rgb(0, 24, 7);
-    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 25%);
+    /* background: linear-gradient(180deg, rgba(255, 255, 255, 1) 5%, rgba(255, 255, 255, 0) 25%); */
+    background: linear-gradient(180deg, rgba(25, 25, 25, .8) 0%, rgba(25, 25, 25, 0) 50%);
     position: absolute;
     top: 0;
     left: 0;
@@ -429,7 +430,7 @@ img.hero-image {
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding-top: 10%;
+    padding-top: 15%;
     /* justify-content: center; */
     align-items: center;
     z-index: 3;
