--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -381,7 +381,7 @@ section.section-hero:after {
     height: 100%;
     background: rgb(0, 24, 7);
     /* background: linear-gradient(180deg, rgba(255, 255, 255, 1) 5%, rgba(255, 255, 255, 0) 25%); */
-    background: linear-gradient(180deg, rgba(25, 25, 25, .8) 0%, rgba(25, 25, 25, 0) 50%);
+    background: linear-gradient(180deg, rgba(25, 25, 25, .8) 0%, rgba(25, 25, 25, 0) 85%, rgba(255, 255, 255, 1));
     position: absolute;
     top: 0;
     left: 0;
@@ -805,11 +805,13 @@ span.swiper-pagination-bullet{
 } */
 
 .swiper-slide.hero-slider__slide {
-position: relative;
-    background: #fff;
+    position: relative;
+    background: rgba(255, 255, 255, .5);
+    backdrop-filter: blur(70px);
     height: calc(100% - 70px);
     padding: 7px;
-    border-radius: 0;
+    color: var(--black);
+    border-radius: 10px;
     /* border-bottom: 2px solid var(--green); */
     /* border: 1px solid #cacaca; */
     opacity: .2;
@@ -845,7 +847,7 @@ position: relative;
     transform: scale(1.3);
     opacity:1;
     z-index: 5;
-    transition: transform .5s linear;
+    transition: transform .7s linear;
 }
 
 .swiper-slide.hero-slider__slide .slider-content {
