--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -124,10 +124,11 @@ h1{
 }
 
 h2{
-    font-size: 28px;
-    margin:0;
-    line-height:1.2;
-    color: #111111;
+    font-size: 24px;
+    margin: 0;
+    line-height: 1.2;
+    color: var(--black);
+    letter-spacing: 3px;
     font-weight: 400;
 }
 
@@ -381,7 +382,7 @@ section.section-hero:after {
     height: 100%;
     background: rgb(0, 24, 7);
     /* background: linear-gradient(180deg, rgba(255, 255, 255, 1) 5%, rgba(255, 255, 255, 0) 25%); */
-    background: linear-gradient(180deg, rgba(25, 25, 25, .8) 0%, rgba(25, 25, 25, 0) 85%, rgba(255, 255, 255, 1));
+    background: linear-gradient(180deg, rgba(25, 25, 25, .8) 0%, rgba(25, 25, 25, 0) 75%, rgba(255, 255, 255, 1));
     position: absolute;
     top: 0;
     left: 0;
@@ -430,7 +431,7 @@ img.hero-image {
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding-top: 15%;
+    padding-top: 10%;
     /* justify-content: center; */
     align-items: center;
     z-index: 3;
