--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -1282,6 +1282,83 @@ a.entry-post__programm__more:hover svg path{
     display: block;
 }
 
+/*BOOKS*/
+
+.entry-post__books {
+    display: grid;
+    grid-template-columns: 500px 1fr;
+    width: 100%;
+    gap: 50px;
+}
+
+.entry-post__books__item {
+    position: relative;
+    width: 500px;
+    height: 650px;
+}
+
+.entry-post__books img {
+    width: 100%;
+    height: 100%;
+    position:absolute;
+    object-fit: cover;
+    object-position: center;
+    z-index:1;
+}
+
+.entry-post__books__item .entry-post__inner__head {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    color: #fff;
+    justify-content: space-between;
+    z-index: 3;
+    padding: 20px;
+}
+
+.entry-post__books__item:after {
+    content: '';
+    display: block;
+    position: absolute;
+    /* background: #000; */
+    background: linear-gradient(-135deg, rgba(25, 25, 25, 0) 0%, rgba(25, 25, 25, 1));
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 2;
+}
+
+.entry-post__books__quote {
+    position:relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 10%;
+}
+
+.post__books__quote {
+    position: relative;
+    font-size: 24px;
+    z-index: 2;
+}
+
+.entry-post__books__quote:before{
+    content: '';
+    width: 170px;
+    height: 150px;
+    background: url(../images/quote.svg) no-repeat;
+    background-position: center;
+    background-size: contain;
+    position: absolute;
+    top: 20%;
+    left: 0;
+    z-index: 1;
+}
+/*FOOTER*/
+
 
 #footer{
     position: relative;
